# rust_mail_client

./: Cargo.toml
src/: main.rs  pop3.rs  smtp.rs  tcp.rs  util.rs
