[package]
name = "mail_client"
version = "0.1.0"
authors = ["Madolkke <madolchepalooza@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trust-dns-client = "*"
trust-dns-resolver = "*"
trust-dns = "*"
chrono = "*"
regex = "*"